--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
 version: "3.8"
 services:
   web:
-    image: sms-gateway-service:latest
-    container_name: "sms-gateway-web"
+    image: email-gateway-service:latest
+    container_name: "email-gateway-web"
     restart: on-failure
     env_file:
       - .env
@@ -10,7 +10,7 @@ services:
     ports:
       - "5000:8000"
     networks:
-      - sms_service
+      - email_service
     depends_on:
       db:
         condition: service_healthy
@@ -18,32 +18,32 @@ services:
         condition: service_healthy
 
   consumer:
-    image: sms-gateway-service:latest
-    container_name: "sms-gateway-consumer"
+    image: email-gateway-service:latest
+    container_name: "email-gateway-consumer"
     restart: on-failure
     env_file:
       - .env
     command: ./start_consumer.sh
     networks:
-      - sms_service
+      - email_service
     depends_on:
       web:
         condition: service_started
 
   db:
     image: postgres:12
-    container_name: "sms-gateway-database"
+    container_name: "email-gateway-database"
     restart: on-failure
     environment:
       POSTGRES_USER: "admin"
       POSTGRES_PASSWORD: "admin"
-      POSTGRES_DB: "sms_gateway_database"
+      POSTGRES_DB: "email_gateway_database"
     volumes:
       - $PWD/.ignore_postgres_data:/var/lib/postgresql/data
     ports:
       - "4000:5432"
     networks:
-      - sms_service
+      - email_service
     healthcheck:
         test: ["CMD", "pg_isready",  "-U", "admin", "-d", "admin"]
 
@@ -55,10 +55,10 @@ services:
     ports:
       - "3000:6379"
     networks:
-      - sms_service
+      - email_service
     healthcheck:
       test: [ "CMD", "redis-cli", "ping" ]
 
 networks:
-  sms_service:
-    name: sms_network
+  email_service:
+    name: email_network
