refactor: 	- modify docker file to include dynamic repository url

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,9 +35,9 @@ services:
     container_name: "email-gateway-database"
     restart: on-failure
     environment:
-      POSTGRES_USER: "admin"
-      POSTGRES_PASSWORD: "admin"
-      POSTGRES_DB: "email_gateway_database"
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     volumes:
       - $PWD/.ignore_postgres_data:/var/lib/postgresql/data
     ports:
